dist/tests/utils/errors/errorNumberToHexString.d.ts
export default function errorNumberToHexString(errorCode: number): string;
//# sourceMappingURL=errorNumberToHexString.d.ts.map